Toolbar bugfix
Fixing the bug of the toolbar not showing by default due to missing
100% width

--- a/emy/emy.css
+++ b/emy/emy.css
@@ -61,10 +61,9 @@ body > *[selected] {
 /************************************************************************************************/
 
 header.toolbar {
-    -webkit-box-sizing:     border-box;
-    -moz-box-sizing:          border-box;
-    box-sizing:                      border-box;
-    overflow:         hidden;
+    position:           	absolute;
+    width:					100%;
+    overflow:         	hidden;
 }
 header.toolbar > div {
     display:            	block;
